...
        >
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:useDefaultMargins="true"
            android:alignmentMode="alignBounds"
            android:columnOrderPreserved="false"
            >
            <TextView
                android:text="Age:"
                android:textSize="18dp"
                android:layout_gravity="left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <EditText
                android:id="@+id/age"
                android:textSize="18dp"
                android:text="@string/profile_no_data"
                android:layout_gravity="left"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:maxLines="1"
...
                android:text="Waistline (cm):"
                android:textSize="18dp"
                android:layout_gravity="left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/waistline"
                android:textSize="18dp"
                android:text="@string/profile_no_data"
                android:layout_gravity="left"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:singleLine="true"
                android:inputType="numberDecimal"
                />
            <TextView
                android:text="BMI (kg/square meter):"
                android:textSize="18dp"
                android:layout_gravity="left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <EditText
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton android:id="@+id/familyHistoryTrue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Yes"
                    android:onClick="onRadioButtonClicked"/>
                <RadioButton android:id="@+id/familyHistoryFalse"
                    android:layout_width="wrap_content"
...
                android:layout_height="wrap_content"
                />
            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton android:id="@+id/genderTrue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Male"
                    android:onClick="onRadioButtonClicked"/>
                <RadioButton android:id="@+id/genderFalse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Female"
                    android:onClick="onRadioButtonClicked"/>
...
                android:textSize="18dp"
                android:layout_gravity="left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <EditText
                android:id="@+id/bloodPressure"
                android:textSize="18dp"
                android:text="@string/profile_no_data"
                android:layout_gravity="left"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:maxLines="1"
...
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/attributes"
        android:id="@+id/submitLayout">
        <Button
            android:text="Submit"
            android:id="@+id/submitBtn"
            android:layout_row="8"
            android:layout_column="0"
            android:layout_gravity="center"
            />
    </GridLayout>
</RelativeLayout>
