...
            android:layout_row="0"
            android:layout_column="0"
            />

        <Button
            android:text="Edit"
            android:id="@+id/editBtn"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_gravity="center"
            />

    </GridLayout>
...
                android:layout_gravity="right"
                android:layout_row="4"
                android:layout_width="240dp"
                android:gravity="right"/>

            <TextView
                android:id="@+id/familyHistory"
                android:textSize="18dp"
                android:text="10"
                android:layout_gravity="left"
                android:layout_row="4"
                android:layout_column="1" />

...
                android:layout_row="5"
                android:layout_width="240dp"
                android:gravity="right"
                />

            <TextView
                android:id="@+id/gender"
                android:textSize="18dp"
                android:text="10"
                android:layout_gravity="left"
                android:layout_row="5"
                android:layout_column="1"/>

...
